2010-09-16  Anders Carlsson  <andersca@apple.com>

        Fix clang++ build.

        * MiniBrowser/mac/BrowserWindowController.m:
        (-[BrowserWindowController zoomIn:]):
        (-[BrowserWindowController zoomOut:]):
        (-[BrowserWindowController resetZoom:]):
        Remove trailing semicolons.

2010-09-16  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r67628.
        http://trac.webkit.org/changeset/67628
        https://bugs.webkit.org/show_bug.cgi?id=45904

        broke the build (Requested by eric_carlson on #webkit).

        * DumpRenderTree/gtk/EventSender.cpp:
        (contextClickCallback):

2010-09-16  Balazs Kelemen  <kbalazs@webkit.org>

        Unreviewed.

        Adding myself as a comitter.

        * Scripts/webkitpy/common/config/committers.py:

2010-09-15  Philippe Normand  <pnormand@igalia.com>

        Reviewed by Eric Carlson.

        [GTK] enhanced context menu for media elements
        https://bugs.webkit.org/show_bug.cgi?id=45021

        EventSender::contextClick() now returns an array of js
        objects. Each object has a title property and a click() method.

        * DumpRenderTree/gtk/EventSender.cpp:
        (getMenuItemTitleCallback):
        (setMenuItemTitleCallback):
        (menuItemClickCallback):
        (getMenuItemClass):
        (contextClickCallback):

2010-09-14  Philippe Normand  <pnormand@igalia.com>

        Reviewed by Eric Carlson and Martin Robinson.

        [GTK] eventSender.contextClick() should return the contents of the context menu
        https://bugs.webkit.org/show_bug.cgi?id=39102

        Make the eventSender use the new private WebKitGtk+ API to
        retrieve the context-menu item titles and store them in an array.

        * DumpRenderTree/gtk/EventSender.cpp:
        (contextClickCallback):

2010-09-16  Eric Uhrhane  <ericu@chromium.org>

        Reviewed by Jian Li.

        Unify FILE_SYSTEM and FILE_WRITER enables under the name FILE_SYSTEM.